fix libaio package name on Ubuntu. It is -dev, not -devel

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 addons:
   apt:
     packages:
-    - libaio-devel
+    - libaio-dev
   # https://scan.coverity.com/travis_ci
   coverity_scan:
     project:
