enable Coverity Scan submission on all branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,10 @@ addons:
     # The command that will be added as an argument to "cov-build" to compile your project for analysis,
     build_command: ./build_for_analysis.sh
 
+    # Pattern to match selecting branches that will run analysis. We recommend leaving this set to 'coverity_scan'.
+    # Take care in resource usage, and consider the build frequency allowances per
+    #   https://scan.coverity.com/faq#frequency
+    branch_pattern: .*
+
 # skip default build steps
 script: []
