--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -274,3 +274,7 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ssl_certs
         DESTINATION ${QPID_DISPATCH_HOME_INSTALLED}/tests)
 
 add_subdirectory(c_unittests)
+
+if(BUILD_BENCHMARKS)
+  add_subdirectory(c_benchmarks)
+endif()
