now broken, one in thread, one subprocess

--- a/tests/c_benchmarks/l1.conf
+++ b/tests/c_benchmarks/l1.conf
@@ -23,8 +23,8 @@ router {
    id : QDRL1
 }
 
-listener {
-    host: 0.0.0.0
+connector {
+    host: 127.0.0.1
     port : 5672
     role: inter-router
 }
@@ -38,6 +38,8 @@ tcpConnector {
 
 log {
     module: DEFAULT
+    includeSource: true
+    outputFile: l1.log
 #    enable: warning+
      enable: debug+
 #     enable: info+
