--- a/tests/c_benchmarks/l2.conf
+++ b/tests/c_benchmarks/l2.conf
@@ -24,11 +24,7 @@ router {
 }
 
 listener {
-    port : 6672
-}
-
-connector {
-    host: 127.0.0.1
+    host: 0.0.0.0
     port : 5672
     role: inter-router
 }
@@ -42,6 +38,8 @@ tcpListener {
 
 log {
     module: DEFAULT
+    includeSource: true
+    outputFile: l2.log
 #    enable: warning+
      enable: debug+
 #     enable: info+
