now working, two subprocesses; the thread approach will not work again after the test loops the second time

--- a/tests/c_benchmarks/l1.conf
+++ b/tests/c_benchmarks/l1.conf
@@ -38,9 +38,9 @@ tcpConnector {
 
 log {
     module: DEFAULT
-    includeSource: true
-    outputFile: l1.log
-#    enable: warning+
-     enable: debug+
+#    includeSource: true
+#    outputFile: l1.log
+    enable: warning+
+#     enable: debug+
 #     enable: info+
 }
