--- a/tests/c_benchmarks/l2.conf
+++ b/tests/c_benchmarks/l2.conf
@@ -38,9 +38,10 @@ tcpListener {
 
 log {
     module: DEFAULT
-    includeSource: true
-    outputFile: l2.log
-#    enable: warning+
-     enable: debug+
+#    includeSource: true
+#    outputFile: l2.log
+    enable: warning+
+#     enable: debug+
 #     enable: info+
 }
+
