--- a/tests/c_unittests/minimal_silent.conf
+++ b/tests/c_unittests/minimal_silent.conf
@@ -18,32 +18,7 @@
 ##
 
 
-router {
-    mode: standalone
-   id : QDR
-}
-
-listener {
-    port : 5672
-}
-
-tcpListener {
-    host : 0.0.0.0
-    port : 5673
-    address : ES
-    siteId : siteId
-}
-
-tcpConnector {
-    host : 127.0.0.1
-    port : 5674
-    address : ES
-    siteId : siteId
-}
-
 log {
     module: DEFAULT
-    enable: warning+
-#     enable: debug+
-#     enable: info+
+    enable: warn+
 }
